# ai-usage-scoring

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FINDINGS.md  Makefile  PROVIDER_SPEC.md  README.md  ai_usage_scoring_spec.md  docker-entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: ci.yml
app/: bus.py  config.py  main.py  ratelimit.py
app/llm/: chat_client.py  judge_client.py  pricing.py
app/llm/prompts/: judge_iteration.txt  judge_prompt_quality.txt  judge_verification.txt  system_chat.txt
app/models/: events.py  tasks.py
app/sandbox/: runner.py
app/scoring/: aggregation.py  heuristics.py  judges.py  live.py  posthoc.py
app/storage/: db.py  events.py  llm_calls.py  schema.sql  scores.py  sessions.py  tasks.py
app/ws/: candidate.py  dashboard.py  manager.py
deploy/: README.md
scripts/: calibrate.py  day1_smoke.py
static/: candidate.css  candidate.html  candidate.js  dashboard.css  dashboard.html  dashboard.js
tasks/: 000-reverse-string.yaml  001-reverse-string.yaml  001-substring-permutations.yaml  002-csv-debug.yaml  003-rate-limiter.yaml
tests/: conftest.py  test_bus.py  test_caps.py  test_deploy.py  test_heuristics.py  test_judges.py  test_llm_calls.py  test_posthoc.py  test_ratelimit.py  test_sandbox.py  test_smoke.py  test_tasks.py  test_ws_candidate.py  test_ws_dashboard.py
tests/fixtures/calibration/: IE1.json  IE2.json  PQ1.json  PQ2.json  PQ3.json  PQ4.json  VB1.json  VB2.json  VB3.json
