[project]
name = "ai-usage-scoring"
version = "0.0.0"
description = "POC platform that scores how engineering candidates use AI during interview tasks."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "openai>=1.30",
    "anthropic>=0.30",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",  # Judge0 client (also FastAPI TestClient + SDK transitive dep)
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that hit real external APIs (skipped in CI via -m 'not live')",
]

[tool.mypy]
python_version = "3.12"
files = ["app"]
ignore_missing_imports = true
